<resources>
    <string name="app_name">Tickets</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="events_list">Список мероприятий</string>
    <string name="data_import">Импорт данных</string>
    <string name="parsing_data_title">Чтение данных</string>
    <string name="data_parsing_finished">Считывание завершено</string>
    <string name="data_parsing_error">Ошибка считывания данных</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_event">Начать проверку</string>
    <string name="sold_number_tickets">Продано %s билетов</string>
    <string name="title_activity_launcher">TicketsCloud</string>
    <string name="scan">Сканирование</string>
    <string name="statistics">Статистика</string>
    <string name="scan_log">История сканирования</string>
    <string name="tickets_parse">Загрузка билетов</string>
    <string name="search">Поиск</string>
    <string name="exit">Выход</string>

</resources>
