<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_events_list"
            android:icon="@drawable/ic_events_list"
            android:title="@string/events_list" />
        <item
            android:icon="@drawable/ic_scanner"
            android:title="@string/scan" />

        <item
            android:icon="@drawable/ic_scanner"
            android:title="@string/statistics" />

        <item
            android:icon="@drawable/ic_scanner"
            android:title="@string/scan_log" />

        <item
            android:id="@+id/nav_import_data"
            android:icon="@drawable/ic_scanner"
            android:title="@string/tickets_parse" />

        <item
            android:icon="@drawable/ic_scanner"
            android:title="@string/search" />
        <item
            android:icon="@drawable/ic_scanner"
            android:title="@string/exit" />

    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
